chore: add meta allow popoups for playground app

--- a/apps/playground/public/index.html
+++ b/apps/playground/public/index.html
@@ -7,6 +7,10 @@
     <meta name="theme-color" content="#000000" />
     <meta name="Cross-Origin-Opener-Policy" content="same-origin" />
     <meta
+      name="Cross-Origin-Opener-Policy"
+      content="same-origin-allow-popups"
+    />
+    <meta
       name="description"
       content="Google OAuth2 using the new Google Identity Services SDK for React @react-oauth/google"
     />
